--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <h1>🎬 <%= title %></h1>
+    <h1><%= title %></h1>
     <ul>
       <% genres.forEach(genre => { %>
       <li><strong><%= genre.name %></strong>: <%= genre.description %></li>
